--- a/mugsy-site/index.html
+++ b/mugsy-site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/img/mugsy-logo-red.png" />
+    <link rel="icon" type="image/png" href="img/mugsy-logo-red.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="theme-color" content="#0b0c10" />
