--- a/mugsy-site/index.html
+++ b/mugsy-site/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Content Security Policy: keep 'unsafe-eval' for Vite dev; remove in prod if using CF header CSP -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://*.railway.app https://*.infura.io; frame-src https://challenges.cloudflare.com; object-src 'none'; base-uri 'none'; form-action 'self' https://*.railway.app;" />
     <link rel="icon" type="image/png" href="img/mugsy-logo-red.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
