--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Content Security Policy: keep 'unsafe-eval' for Vite dev; remove in prod if using CF header CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://*.railway.app https://*.infura.io; frame-src https://challenges.cloudflare.com; object-src 'none'; base-uri 'none'; form-action 'self' https://*.railway.app;" />
-    <link rel="icon" type="image/png" href="img/mugsy-logo-red.png" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://redmugsy.github.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://challenges.cloudflare.com https://redmugsy.github.io; style-src 'self' 'unsafe-inline' https://redmugsy.github.io; img-src 'self' data: https: https://redmugsy.github.io; font-src 'self' data: https://redmugsy.github.io; connect-src 'self' https://*.railway.app https://*.infura.io; frame-src https://challenges.cloudflare.com; object-src 'none'; base-uri 'none'; form-action 'self' https://*.railway.app;" />
+    <link rel="icon" type="image/png" href="/mugsywebsite/img/mugsy-logo-red.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/mugsywebsite/apple-touch-icon.png" />
     <link rel="manifest" href="/mugsywebsite/site.webmanifest" />
     <meta name="theme-color" content="#0b0c10" />
