Fix: Update CSP to allow Railway API connections
- Add specific Railway API URL to connect-src CSP directive
- This should resolve API connection refused errors on Contact page
- Maintains security while allowing legitimate API calls

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Content Security Policy: keep 'unsafe-eval' for Vite dev; remove in prod if using CF header CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://redmugsy.com https://redmugsy.github.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://challenges.cloudflare.com https://redmugsy.com https://redmugsy.github.io; style-src 'self' 'unsafe-inline' https://redmugsy.com https://redmugsy.github.io; img-src 'self' data: https: https://redmugsy.com https://redmugsy.github.io; font-src 'self' data: https://redmugsy.com https://redmugsy.github.io; connect-src 'self' https://*.railway.app https://*.infura.io; frame-src https://challenges.cloudflare.com; object-src 'none'; base-uri 'none'; form-action 'self' https://*.railway.app;" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://redmugsy.com https://redmugsy.github.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://challenges.cloudflare.com https://redmugsy.com https://redmugsy.github.io; style-src 'self' 'unsafe-inline' https://redmugsy.com https://redmugsy.github.io; img-src 'self' data: https: https://redmugsy.com https://redmugsy.github.io; font-src 'self' data: https://redmugsy.com https://redmugsy.github.io; connect-src 'self' https://*.railway.app https://*.infura.io https://contact-api-production-e6c9.up.railway.app; frame-src https://challenges.cloudflare.com; object-src 'none'; base-uri 'none'; form-action 'self' https://*.railway.app;" />
     <link rel="icon" type="image/png" href="/img/mugsy-logo-red.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
