--- a/mugsy-site/index.html
+++ b/mugsy-site/index.html
@@ -15,6 +15,26 @@
   </head>
   <body>
     <div id="root"></div>
+    
+    <!-- Single Page Apps for GitHub Pages -->
+    <!-- Start SPA redirect script -->
+    <script>
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
+    <!-- End SPA redirect script -->
+    
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
